[metadata]
name = foyou-wilk
version = attr: wilk.__version__
author = foyou
author_email = yimi.0822@qq.com
description = python pypi package https://github.com/foyoux/weixin-wxposed-silk-voice
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/foyoux/weixin-wxposed-silk-voice
project_urls =
    Source = https://github.com/foyoux/weixin-wxposed-silk-voice
    Bug Tracker = https://github.com/foyoux/weixin-wxposed-silk-voice/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Development Status :: 4 - Beta
keywords = wechat weixin xpsoed silk voice
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    av
    pilk

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wilk = wilk:main
